--- a/productos.html
+++ b/productos.html
@@ -37,7 +37,7 @@
 
     <header class="bg-header text-white py-4">
         <div class="container mx-auto flex justify-between items-center px-16">
-            <img src="src/img/DOOSANK.png" alt="Doosank Logo" class="h-32">
+            <a href="index.html"><img src="src/img/DOOSANK.png" alt="Doosank Logo" class="h-32"></a>
             <!-- <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="text-lg font-semibold hover:underline"><img src="./src/img/klipartz.com.png" class="h-12" alt="WhatsApp-icon"></a> -->
             <a href="https://wa.me/1133349849" class="text-gray-400 hover:text-gray-200 transition">.
                 <i class="fab fa-whatsapp text-6xl"></i> <!-- Se agrega text-2xl para aumentar el tamaño del ícono -->
@@ -122,7 +122,7 @@
             <div class="w-full md:w-1/4 mb-6 md:mb-0">
               <h3 class="text-xl font-semibold mb-4">Enlaces útiles</h3>
               <ul class="space-y-2">
-                <li><a href="dosank_index.html" class="text-gray-400 hover:text-gray-200 transition">Inicio</a></li>
+                <li><a href="index.html" class="text-gray-400 hover:text-gray-200 transition">Inicio</a></li>
                 <li><a href="productos.html" class="text-gray-400 hover:text-gray-200 transition">Productos</a></li>
                 <li><a href="https://wa.me/1133349849" class="text-gray-400 hover:text-gray-200 transition">Contacto</a></li>
               </ul>
