--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       
           <!-- Derechos de autor -->
           <div class="text-center text-gray-500 mt-8">
-            &copy; 2024 Doosank. Todos los derechos reservados, pagina hecha con ❤ por <a href="https://www.linkedin.com/in/thom%C3%A1s-casco-43b4491a3/" class="text-blue-400 hover:text-blue-200 transition"></a>
+            &copy; 2024 Doosank. Todos los derechos reservados, pagina hecha con ❤ por <a href="https://www.linkedin.com/in/thom%C3%A1s-casco-43b4491a3/" class="text-blue-400 hover:text-blue-200 transition">Thomas Casco</a>
           </div>
         </div>
       </footer>
