Add a few changes in the main page

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 </div>
                 <div class="card bg-white p-4 rounded-lg shadow-md flex flex-col justify-between">
                     <div>
-                        <h3 class="text-xl font-semibold mb-2">Compra y Venta</h3>
-                        <p class="text-gray-700">Realizamos compra y venta de productos.</p>
+                        <h3 class="text-xl font-semibold mb-2">Venta</h3>
+                        <p class="text-gray-700">Realizamos venta de productos de alta calidad y performance.</p>
                     </div>
                     <!-- Aquí puedes poner la imagen para Compra y Venta -->
                     <img src="./src/img/4.png" alt="Compra y Venta" class="mt-4 rounded-lg h-48 sm:h-auto w-full object-cover">
@@ -157,7 +157,7 @@
             <div class="w-full md:w-1/4 mb-6 md:mb-0">
                 <h3 class="text-xl font-semibold mb-4">Síguenos</h3>
                 <div class="flex flex-col space-y-4">
-                <a href="https://www.instagram.com" class="text-gray-400 hover:text-gray-200 transition">
+                <a href="https://www.instagram.com/doosank/" class="text-gray-400 hover:text-gray-200 transition">
                     <i class="fab fa-instagram text-2xl"></i><p>instagram</p> <!-- Se agrega text-2xl para aumentar el tamaño del ícono -->
                 </a>
                 <a href="https://wa.me/1133349849" class="text-gray-400 hover:text-gray-200 transition">
