--- a/productos.html
+++ b/productos.html
@@ -57,51 +57,64 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 <!-- Producto 1 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
-                    <img src="./src/img/productos/termos_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <img src="./src/img/productos/cocina_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
-                        <h3 class="text-xl font-bold mb-2 text-gray-800">Producto 1</h3>
-                        <p class="text-gray-600 mb-4">Descripción del producto 1 que ofrece beneficios y características destacadas. ¡Ideal para tus necesidades diarias!</p>
-                        <p class="text-gray-800 font-semibold text-lg">Precio: $100</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 21501x</h3>
+                        <p class="text-gray-600 mb-4">Cocina A Gas Longvie 21501x 56cm Inox Grill Eléctrico Color Acero inoxidable Tipo de conexión a Gas natural</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la cocina a gas Longvie" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 2 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
-                    <img src="./src/img/productos/termos_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <img src="./src/img/productos/cocina_2.png" alt="Producto 2" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
-                        <h3 class="text-xl font-bold mb-2 text-gray-800">Producto 1</h3>
-                        <p class="text-gray-600 mb-4">Descripción del producto 1 que ofrece beneficios y características destacadas. ¡Ideal para tus necesidades diarias!</p>
-                        <p class="text-gray-800 font-semibold text-lg">Precio: $100</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina Longvie Eurodesign19601</h3>
+                        <p class="text-gray-600 mb-4">Cocina Longvie Eurodesign19601 con puerta con visor color blanco</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Cocina Longvie Eurodesign19601" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 3 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
-                    <img src="./src/img/productos/termos_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <img src="./src/img/productos/cocina_3.png" alt="Producto 3" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
-                        <h3 class="text-xl font-bold mb-2 text-gray-800">Producto 1</h3>
-                        <p class="text-gray-600 mb-4">Descripción del producto 1 que ofrece beneficios y características destacadas. ¡Ideal para tus necesidades diarias!</p>
-                        <p class="text-gray-800 font-semibold text-lg">Precio: $100</p>
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 13331xf</h3>
+                        <p class="text-gray-600 mb-4">Cocina A Gas Longvie 13331xf 56cm Inox Cajón Parrilla Color Acero inoxidable Tipo de conexión Multigas</p>
                         <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 4 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
-                    <img src="./src/img/productos/termos_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <img src="./src/img/productos/cocina_4.png" alt="Producto 4" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
-                        <h3 class="text-xl font-bold mb-2 text-gray-800">Producto 1</h3>
-                        <p class="text-gray-600 mb-4">Descripción del producto 1 que ofrece beneficios y características destacadas. ¡Ideal para tus necesidades diarias!</p>
-                        <p class="text-gray-800 font-semibold text-lg">Precio: $100</p>
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 19601x</h3>
+                        <p class="text-gray-600 mb-4">Cocina A Gas Longvie 19601x 60cm Inox Encendido Una Mano Color Acero inoxidable</p>
                         <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 5 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
-                    <img src="./src/img/productos/termos_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <img src="./src/img/productos/cocina_5.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
-                        <h3 class="text-xl font-bold mb-2 text-gray-800">Producto 1</h3>
-                        <p class="text-gray-600 mb-4">Descripción del producto 1 que ofrece beneficios y características destacadas. ¡Ideal para tus necesidades diarias!</p>
-                        <p class="text-gray-800 font-semibold text-lg">Precio: $100</p>
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Horno empotrable HE1900</h3>
+                        <p class="text-gray-600 mb-4">Horno empotrable eléctrico Longvie Standard HE1900 56 L acero inoxidable 220V</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 5 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/cocina_7.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Horno empotrable Hest60x</h3>
+                        <p class="text-gray-600 mb-4">Horno Eléctrico Touch Longvie Hest60x De Empotrar Color Acero inoxidable</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 5 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/cocina_8.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Eléctrico Longvie Te80f</h3>
+                        <p class="text-gray-600 mb-4">Termotanque Eléctrico Longvie Te80f Color Blanco</p>
                         <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
