Add, all the products

--- a/productos.html
+++ b/productos.html
@@ -49,7 +49,7 @@
         <section class="mb-8">
             <h2 class="text-4xl font-extrabold mb-4 text-gray-800 text-center">
                 <span class="relative inline-block">
-                    <span class="relative z-10">Productos en Stock</span>
+                    <span class="relative z-10">Cocinas y Calefones en stock</span>
                     <span class="absolute inset-x-0 bottom-0 h-2 bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500 transform translate-y-2 opacity-75 transition duration-500 ease-in-out hover:translate-y-0"></span>
                 </span>
             </h2>
@@ -61,7 +61,7 @@
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 21501x</h3>
                         <p class="text-gray-600 mb-4">Cocina A Gas Longvie 21501x 56cm Inox Grill Eléctrico Color Acero inoxidable Tipo de conexión a Gas natural</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la cocina a gas Longvie" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Cocina A Gas Longvie 21501x" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 2 -->
@@ -79,7 +79,7 @@
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 13331xf</h3>
                         <p class="text-gray-600 mb-4">Cocina A Gas Longvie 13331xf 56cm Inox Cajón Parrilla Color Acero inoxidable Tipo de conexión Multigas</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa Cocina A Gas Longvie 13331xf" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 4 -->
@@ -88,7 +88,7 @@
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Cocina A Gas Longvie 19601x</h3>
                         <p class="text-gray-600 mb-4">Cocina A Gas Longvie 19601x 60cm Inox Encendido Una Mano Color Acero inoxidable</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! quiero info sobre Cocina A Gas Longvie 19601x" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
                 <!-- Producto 5 -->
@@ -97,25 +97,134 @@
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Horno empotrable HE1900</h3>
                         <p class="text-gray-600 mb-4">Horno empotrable eléctrico Longvie Standard HE1900 56 L acero inoxidable 220V</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Horno empotrable HE1900" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
-                <!-- Producto 5 -->
+                <!-- Producto 6 -->
                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
                     <img src="./src/img/productos/cocina_7.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Horno empotrable Hest60x</h3>
                         <p class="text-gray-600 mb-4">Horno Eléctrico Touch Longvie Hest60x De Empotrar Color Acero inoxidable</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Horno empotrable Hest60x" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
-                <!-- Producto 5 -->
-                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                 <!-- Producto 7 -->
+                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
                     <img src="./src/img/productos/cocina_8.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Horno Longvie H14600xf</h3>
+                        <p class="text-gray-600 mb-4">Horno A Gas Longvie H14600xf Con Cajón Parrilla De Empotrar Color Plateado</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Horno Longvie H14600xf" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 8 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
                     <div class="p-4">
                         <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Eléctrico Longvie Te80f</h3>
                         <p class="text-gray-600 mb-4">Termotanque Eléctrico Longvie Te80f Color Blanco</p>
-                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Producto 1" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa elTermotanque Eléctrico Longvie Te80f" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 9 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_2.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Eléctrico Longvie Te60f</h3>
+                        <p class="text-gray-600 mb-4">Termotanque Eléctrico Longvie Te60f Color Blanco</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque Eléctrico Longvie Te60f" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 10 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_3.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque TSBG-50 50 Litros</h3>
+                        <p class="text-gray-600 mb-4">Termotanque Multigas Señorial TSBG-50 Linea Black 50 Litros</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque TSBG-50" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 11 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_4.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Longvie 150 Litros T3150f</h3>
+                        <p class="text-gray-600 mb-4">Termotanque A Gas Longvie 150 Litros T3150f Color Blanco</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque Longvie T3150f" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 12 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_5.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Señorial Electrico Black 2.0 </h3>
+                        <p class="text-gray-600 mb-4">Termotanque Señorial 40 Electrico Black 2.0 Color Negro</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque Señorial Electrico Black 2.0" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Producto 13 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/termo_6.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termotanque Eléctrico Señorial TSBE-80 80 L</h3>
+                        <p class="text-gray-600 mb-4">Termotanque Eléctrico Señorial Black TSBE-80 negro 80 L</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termotanque Electrico TSBE-80" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mb-8">
+            <h2 class="text-4xl font-extrabold mb-4 text-gray-800 text-center">
+                <span class="relative inline-block">
+                    <span class="relative z-10">Repuestos en stock</span>
+                    <span class="absolute inset-x-0 bottom-0 h-2 bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500 transform translate-y-2 opacity-75 transition duration-500 ease-in-out hover:translate-y-0"></span>
+                </span>
+            </h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                  <!-- Repuesto 1 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_1.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Termotanque Electrico</h3>
+                        <p class="text-gray-600 mb-4">Termostato Termotanque Electrico Negro Señorial Tsbe 80</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termostato Negro Señorial Tsbe 80" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                 <!-- Repuesto 2 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_2.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Resistencia Anodo Termotanque Eléctrico</h3>
+                        <p class="text-gray-600 mb-4">Resistencia Anodo Termotanque Eléctrico Señorial Black 80 L</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la Resistencia Anodo Termotanque Eléctrico Señorial Black 80 L" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                 <!-- Repuesto 3 -->
+                 <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_3.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Instalacion Electrica P/ Termotanque</h3>
+                        <p class="text-gray-600 mb-4">Instalacion Electrica P/ Termotanque Negro Señorial Tsbe-80</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la Instalacion Electrica P/ Termotanque Negro Señorial Tsbe-80" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 4 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_4.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Termostato Con Varilla</h3>
+                        <p class="text-gray-600 mb-4">Termostato Con Varilla Termotanque Electrico Nex 40 Litros</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa el Termostato Con Varilla Termotanque Electrico Nex 40 Litros" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
+                    </div>
+                </div>
+                <!-- Repuesto 5 -->
+                <div class="card bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-transform transform hover:scale-105 duration-300">
+                    <img src="./src/img/productos/repuesto_5.png" alt="Producto 1" class="w-full h-64 object-cover rounded-t-lg">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold mb-2 text-gray-800">Valvula De Alivio P/ Termotanque</h3>
+                        <p class="text-gray-600 mb-4">Valvula De Alivio P/ Termotanque Electrico Nex Tn-40e</p>
+                        <a href="https://wa.me/1133349849?text=¡Hola! Me interesa la Valvula De Alivio P/ Termotanque Electrico Nex Tn-40e" class="block bg-primary text-white text-center py-2 mt-4 rounded-lg hover:bg-primary-dark transition-colors duration-300">Consultar por WhatsApp</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +254,7 @@
             <div class="w-full md:w-1/4 mb-6 md:mb-0">
                 <h3 class="text-xl font-semibold mb-4">Síguenos</h3>
                 <div class="flex flex-col space-y-4">
-                <a href="https://www.instagram.com" class="text-gray-400 hover:text-gray-200 transition">
+                <a href="https://www.instagram.com/doosank/" class="text-gray-400 hover:text-gray-200 transition">
                     <i class="fab fa-instagram text-2xl"></i><p>instagram</p> <!-- Se agrega text-2xl para aumentar el tamaño del ícono -->
                 </a>
                 <a href="https://wa.me/1133349849" class="text-gray-400 hover:text-gray-200 transition">
